#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2002 Mark Wong & Open Source Development Labs, Inc.
#
# Copyright (c) 2011, Oracle and/or its affiliates. All rights reserved
#
# Added a number of new files to be part of the source distribution
#

# Process this file with automake to create Makefile.in

AUTOMAKE_OPTIONS = foreign

SUBDIRS = . src storedproc

# FIXME: do we need all these files in the distribution?
EXTRA_DIST = \
AUTHORS \
LICENSE \
README \
README-GENERAL \
README-AUTOMATED \
README-FREEBSD \
README-ICLAUSTRON \
README-MYSQL \
README-POSTGRESQL \
README-SOLARIS \
bootstrap.sh \
storedproc/Makefile.am \
storedproc/sapdb/7.0.3.29/delivery.sql \
storedproc/sapdb/7.0.3.29/delivery_2.sql \
storedproc/sapdb/7.0.3.29/new_order.sql \
storedproc/sapdb/7.0.3.29/new_order_2.sql \
storedproc/sapdb/7.0.3.29/order_status.sql \
storedproc/sapdb/7.0.3.29/payment.sql \
storedproc/sapdb/7.0.3.29/stock_level.sql \
storedproc/sapdb/delivery.sql \
storedproc/sapdb/delivery_2.sql \
storedproc/sapdb/new_order.sql \
storedproc/sapdb/new_order_2.sql \
storedproc/sapdb/order_status.sql \
storedproc/sapdb/payment.sql \
storedproc/sapdb/stock_level.sql \
storedproc/mysql/delivery.sql \
storedproc/mysql/new_order.sql \
storedproc/mysql/new_order_2.sql \
storedproc/mysql/order_status.sql \
storedproc/mysql/payment.sql \
storedproc/mysql/stock_level.sql \
scripts/bench_prepare.sh \
scripts/create_dbt2_files.sh \
scripts/dbt2.sh \
scripts/gen_html.sh \
scripts/mgm_cluster.sh \
scripts/mix_analyzer.pl \
scripts/notpm.input \
scripts/run_dbt2_test.sh \
scripts/run_mysql.sh.in \
scripts/run_oltp.sh \
scripts/run_workload.sh.in \
scripts/start_ndb.sh \
scripts/sysstats.sh.in \
scripts/transform_iostat.pl \
scripts/transform_sar.sh.in \
scripts/vmplot.sh \
scripts/Linux/get_os_info.sh.in \
scripts/SunOS/get_os_info.sh.in \
scripts/sapdb/db_create_stats/info/space_used_all.sh \
scripts/sapdb/db_create_stats/info/space_used_index.sh \
scripts/sapdb/db_create_stats/info/space_used_leaf.sh \
scripts/sapdb/db_create_stats/info/tableinfo.sh \
scripts/sapdb/db_create_stats/queries/doit.sh \
scripts/sapdb/db_create_stats/queries/qCUSTOMER \
scripts/sapdb/db_create_stats/queries/qDISTRICT \
scripts/sapdb/db_create_stats/queries/qHISTORY \
scripts/sapdb/db_create_stats/queries/qITEM \
scripts/sapdb/db_create_stats/queries/qNEW_ORDER \
scripts/sapdb/db_create_stats/queries/qORDERS \
scripts/sapdb/db_create_stats/queries/qORDER_LINE \
scripts/sapdb/db_create_stats/queries/qSTOCK \
scripts/sapdb/db_create_stats/queries/qWAREHOUSE \
scripts/sapdb/db_create_stats/get_it_all.sh \
scripts/sapdb/db_create_stats/runsql.sh \
scripts/sapdb/backup_db.sh \
scripts/sapdb/create_db_sample.sh \
scripts/sapdb/create_indexes.sh \
scripts/sapdb/create_tables.sql \
scripts/sapdb/customer.sql \
scripts/sapdb/db_setup.sh \
scripts/sapdb/db_stats.sh \
scripts/sapdb/district.sql \
scripts/sapdb/drop_db.sh \
scripts/sapdb/drop_dbproc.sh \
scripts/sapdb/history.sql \
scripts/sapdb/item.sql \
scripts/sapdb/load_dbproc.sh \
scripts/sapdb/new_order.sql \
scripts/sapdb/order_line.sql \
scripts/sapdb/orders.sql \
scripts/sapdb/plan.sh \
scripts/sapdb/restore_db.sh \
scripts/sapdb/start_db.sh \
scripts/sapdb/stock.sql \
scripts/sapdb/stop_db.sh \
scripts/sapdb/trace_off.sh \
scripts/sapdb/trace_on.sh \
scripts/sapdb/update_stats.sh \
scripts/sapdb/warehouse.sql \
scripts/mysql/mysql_dbt2_plans.sh \
scripts/mysql/mysql_load_db.sh  \
scripts/mysql/mysql_load_sp.sh  \
doc/Makefile \
doc/maintenance.sxw \
doc/class.dia \
doc/component.dia \
doc/sapdb_sizing.sxc \
doc/dbt2-architecture.tex \
doc/dbt2-user.tex \
doc/dbt2-tpc.tex

